Fixing color top-bar +stylen scrollbar

--- a/poms/src/styles.css
+++ b/poms/src/styles.css
@@ -67,3 +67,13 @@ mat-dialog-container{
 }
 .mat-checkbox-checked.mat-accent .mat-checkbox-background,.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background{background-color: #62c6d6
 }
+::-webkit-scrollbar{
+  background-color: #d1d1d1;
+  width: 5px;
+  border-radius: 4px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #4c4c4c;
+  width: 5px;
+  border-radius: 4px;
+}
